--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,4 +1,4 @@
-<p>Welcome <%= @resource.email %>!</p>
+<p>Welcome <%= @resource.customers_email %>!</p>
 
 <p>You can confirm your account through the link below:</p>
 
