--- a/app/views/devise/mailer/unlock_instructions.html.erb
+++ b/app/views/devise/mailer/unlock_instructions.html.erb
@@ -1,4 +1,4 @@
-<p>Hello <%= @resource.email %>!</p>
+<p>Hello <%= @resource.customers_email %>!</p>
 
 <p>Your account has been locked due to an excessive amount of unsuccessful sign in attempts.</p>
 
