--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -3,8 +3,8 @@
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
   <%= devise_error_messages! %>
 
-  <p><%= f.label :email %></p>
-  <p><%= f.text_field :email %></p>
+  <p><%= f.label :customers_email %></p>
+  <p><%= f.text_field :customers_email %></p>
 
   <p><%= f.label :password %> <i>(leave blank if you don't want to change it)</i></p>
   <p><%= f.password_field :password %></p>
