--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
 <head>
-  <title>DvdpostSso</title>
+  <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
+  <title>DVDPost SSO</title>
   <%= stylesheet_link_tag :all %>
-  <%= javascript_include_tag :defaults %>
+  <% if false %><%= javascript_include_tag :defaults %><% end %>
   <%= csrf_meta_tag %>
 </head>
 <body>
