--- a/public/stylesheets/sso.css
+++ b/public/stylesheets/sso.css
@@ -86,6 +86,7 @@ body {
   color:#393939;
   text-align:left;
   background:url(/images/bg_loging.png) no-repeat;
+  height:400px;
 }
 
 #login_content {
@@ -130,4 +131,5 @@ body {
   font-size:0.8em;
   height:38px;
   width:117px;
+  margin-top: -10px;
 }
