--- a/public/stylesheets/sso.css
+++ b/public/stylesheets/sso.css
@@ -104,7 +104,7 @@ body {
 
 .inputs_codes input{
   border:1px solid #343434;
-  color:#B7B7B7;
+  color:#000;
   font:14px Arial,Helvetica,sans-serif;
   margin-left:3px;
   padding-left:15px;
