--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
-  <title>DVDPost SSO</title>
+  <title>DVDPost login</title>
   <%= stylesheet_link_tag :all %>
   <% if false %><%= javascript_include_tag :defaults %><% end %>
   <%= csrf_meta_tag %>
