--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,18 +1,22 @@
 <h2>Sign up</h2>
-
-<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
+<% site = params[:site].nil? ?  'www' : params[:site] %>
+<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name, :promotion => params[:promotion], :p_id => params[:p_id], :site => params[:site] )) do |f| %>
   <%= devise_error_messages! %>
-  <p><%= f.label :customers_email %></p>
-  <p><%= f.text_field :customers_email %></p>
+  <p><%= f.label :customers_email_address %></p>
+  <p><%= f.text_field :customers_email_address %></p>
 
   <p><%= f.label :password %></p>
   <p><%= f.password_field :password %></p>
 
   <p><%= f.label :password_confirmation %></p>
   <p><%= f.password_field :password_confirmation %></p>
-
+     <%= f.hidden_field :promotion, :value => params[:promotion] %>
+     <%= f.hidden_field :site, :value => site %>
+  <p>
+    <%= f.label :newsletter %>
+    <%= f.check_box :newsletter, {:checked => true}, 1 %>
+  </p>   
   <p><%= f.submit "Sign up" %></p>
->>>>>>> 211672d0310afd30d7572a929db3ef3c28275536
 <% end %>
 
 <%= render :partial => "devise/shared/links" %>
