--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
-  <title>DVDPost login</title>
+  <link rel="SHORTCUT ICON" href="/images/favicon_normal.ico" />
+  <title><%= @title %></title>
   <%= stylesheet_link_tag :all %>
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,300italic,700' rel='stylesheet' type='text/css' />
   <% if false %><%= javascript_include_tag :defaults %><% end %>
   <%= csrf_meta_tag %>
 </head>
