--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -40,7 +40,7 @@ html, body {
 	color: #393939;
 	font-size: 16px;
 	font-weight: lighter;
-	height: 367px;
+	height: 100%;
 	width: 380px;
 	padding-bottom: 20px;
 }
