--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
   <link rel="SHORTCUT ICON" href="/images/favicon_normal.ico" />
   <title><%= @title %></title>
   <%= stylesheet_link_tag :all %>
-	<link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,300italic,700' rel='stylesheet' type='text/css' />
+	<link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,300italic,700' rel='stylesheet' type='text/css' />
   <% if false %><%= javascript_include_tag :defaults %><% end %>
   <%= csrf_meta_tag %>
 </head>
